# EmbedICCProfile

./: .gitignore  LICENSE  README.md
icc-profile/: ITU-2020.icc
scr/: main.cpp
scr/liuzianglib/: DC_type.h
src/: CMakeLists.txt  EmbedICCProfile.cpp  main.cpp
